--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.1"
+    "graphql-yoga": "^1.18.3",
+    "mongoose": "^5.7.1",
+    "graphql": "^14.5.6"
   }
 }
